--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -132,7 +132,7 @@
                                 <span lang="zh-CN">设置已停用。</span>
                                 <span lang="zh-TW">設定已停用。</span>
                             </span>
-                            <span class="alert-moreinfo" onclick="showError()" role="button">
+                            <span class="alert-moreinfo" onclick="showError()">
                                 <span lang="en">Why?</span>
                                 <span lang="ja">なんで？</span>
                                 <span lang="kr">무슨 일인가요?</span>
