--- a/TREM.Electron/Views/IntensityView.html
+++ b/TREM.Electron/Views/IntensityView.html
@@ -106,7 +106,7 @@
                                         <span class="report-overview-unit">GMT+8</span>
                                     </div>
                                 </div>
-                                <div class="report-overview-item">
+                                <div class="report-overview-item" id="intensity-overview-item-lat-lon">
                                     <div class="report-overview-item-label">
                                         <span class="report-overview-item-icon material-symbols-rounded">my_location</span>
                                         <span class="report-overview-item-label-text">
@@ -125,7 +125,7 @@
                                         <span class="report-overview-unit">°E</span>
                                     </div>
                                 </div>
-                                <div class="report-overview-item">
+                                <div class="report-overview-item" id="intensity-overview-item-unit">
                                     <div class="report-overview-item-label">
                                         <span class="report-overview-item-icon material-symbols-rounded">crisis_alert</span>
                                         <span class="report-overview-item-label-text">
@@ -142,7 +142,7 @@
                                         <span id="intensity-overview-magnitude"></span>
                                     </div>
                                 </div>
-                                <div class="report-overview-item">
+                                <div class="report-overview-item" id="intensity-overview-item-depth">
                                     <div class="report-overview-item-label">
                                         <span class="report-overview-item-icon material-symbols-rounded">keyboard_double_arrow_down</span>
                                         <span class="report-overview-item-label-text">
