--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -3279,7 +3279,7 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="control-title">
+                                <!-- <div class="control-title">
                                     <span lang="en">?</span>
                                     <span lang="ja">?</span>
                                     <span lang="kr">?</span>
@@ -3321,7 +3321,7 @@
                                                 <span lang="en">?</span>
                                                 <span lang="ja">?</span>
                                                 <span lang="kr">?</span>
-                                                <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                                <span lang="ru">?</span> <-- TODO: Untranslated, remove this comment after translation
                                                 <span lang="zh-CN">?</span>
                                                 <span lang="zh-TW">連動路徑</span>
                                                 <span class="option-label-id">link.path</span>
@@ -3343,7 +3343,7 @@
                                                 <span lang="en">?</span>
                                                 <span lang="ja">?</span>
                                                 <span lang="kr">?</span>
-                                                <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                                <span lang="ru">?</span> <-- TODO: Untranslated, remove this comment after translation
                                                 <span lang="zh-CN">?</span>
                                                 <span lang="zh-TW">連動檔名</span>
                                                 <span class="option-label-id">link.name</span>
@@ -3370,7 +3370,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="control-title">
                                     <span lang="en">exptech</span>
                                     <span lang="ja">exptech</span>
